<resources>
    <string name="app_name">SulemaIA</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_load_screen">SulemaIA</string>
    <string name="add_map">Agregar nuevo mapa</string>
    <string name="not_selected_file">Archivo no seleccionado</string>
    <string name="main_activity_title">SulemitaAppMap</string>
    <string name="read_permission">No se otorgaron los permisos de escritura</string>
    <string name="read_permission_granted">Permisos de lectura otorgados</string>
    <string name="read_permission_denied">Permisos de lectura denegados</string>
    <string name="content_file">Contenido del archivo</string>
    <string name="invalid_content">Contenido no valido</string>
    <string name="unselected_file">No se selecciono ningun archivo</string>
    <string name="land_name_test">Pantano</string>
    <string name="land_code_test">100</string>
    <string name="change_name">Cambiar nombre</string>
    <string name="change_name_message">Escribe el nuevo nombre a asignar al elemento</string>
    <string name="field_name">Nombre del campo</string>
    <string name="field_type">Tipo</string>
    <string name="field_value">Valor</string>
    <string name="field_initial">Inicial</string>
    <string name="field_final">Final</string>
    <string name="field_information_activity_name">Informacion de celda</string>
    <string name="character_selector_activity_name">Selector de personaje</string>
    <string name="character_name">Nombre</string>
    <string name="character_main">Este personaje es mejor en:</string>
    <string name="character_main_field">Oceano</string>
    <string name="please_select_final">Por favor selecciona un final</string>
    <string name="error">Error</string>
    <string name="please_select_initial">Por favor selecciona un inicial</string>
    <string name="accept">Aceptar</string>
    <string name="biome">Bioma</string>
    <string name="costs">Costos</string>
    <string name="aply_cost">Aplica\ncosto</string>
    <string name="cost">Costo</string>

    <string name="character_activity">Personaje</string>
    <string name="cancel">Cancelar</string>
    <string name="color">Color</string>
    <string name="delete_character">Borrar caracter</string>
    <string name="confirmation_delete_character">¿Estas segur@ de querer borrar este caracter?</string>
    <string name="not_valid_value">Valor no valido</string>
    <string name="delete">Borrar</string>
    <string name="choose_icon">Elige un icono</string>
    <string name="cant_less_1_item">No puede haber menos de 1 personaje :c</string>
    <string name="cant_more_5_items">No puedes tener mas de 5 personajes :c</string>
    <string name="cant_start_in_field">El personaje no puede iniciar, TERRENO NO PERIMITIDO, modifique los valores o seleccione otro personaje</string>
    <string name="cant_finish_in_field">El personaje no puede finalizar, TERRENO NO PERIMITIDO, modifique los valores o seleccione otro personaje</string>
    <string name="game_activity">Juego</string>
    <string name="game_over">Fin del juego</string>
    <string name="you_finish_game">Felicidades, llegaste a la casilla final</string>
    <string name="cant_go_to_field">No se puede pasar al campo (definido por el usuario)</string>
    <string name="field_information_game_screen">Informacion de celda</string>
    <string name="skip_tutorial">Saltar tutorial</string>
    <string name="description_add_map">Aquí puedes seleccionar un mapa nuevo. Este botón mostrará todos tus archivos, así que recuerda sólo seleccionar los .txt</string>
    <string name="map">Mapa</string>
    <string name="description_map">Aquí se mostrará el mapa al momento de crearse.</string>
    <string name="item_field_title">Elemento del mapa</string>
    <string name="item_field_description">Al hacer tap en una casilla, se abrirá una vista para elegir si será Final o Inicial, así como para poder cambiar el color y el nombre del terreno.</string>
    <string name="next_page_main_activity">Siguiente página</string>
    <string name="next_page_main_activity_description">Aquí seguirás a la página de editor de personaje; Recuerda completar todos los campos.</string>
    <string name="delete_map">Borrar mapa</string>
    <string name="delete_map_description">Con esta opción podrás eliminar el mapa actual y cargar uno nuevo.</string>
    <string name="add_character_title">Agregar nuevo personaje</string>
    <string name="add_character_description">Aquí podrás crear un nuevo personaje, que se generará con características por defecto; después podrás cambiarlo manualmente.</string>
    <string name="icon">Icono</string>
    <string name="icon_character_description">Aquí podrás cambiar la imagen de tu personaje.</string>
    <string name="delete_character_description">Aquí podrás eliminar al personaje. Ten cuidado.</string>
    <string name="change_name_description">Aquí podrás cambiar el nombre de tu personaje.</string>
    <string name="aply_cost_description">Si se selecciona la casilla, el personaje tendrá un costo de movimiento en dicho terreno; si no, no podrá moverse a través de él.</string>
    <string name="cost_description">Aquí ingresas el costo de movimiento sobre este tipo de terreno en especifico (para este personaje), siempre mayor o igual a 0.</string>
    <string name="game_description">Cuando hayas seleccionado un personaje, aquí podras proceder a la pantalla de juego.</string>
    <string name="game_field">Campo de juego</string>
    <string name="game_field_description">Si presionas en cualquier casilla del juego, podrás ver el texto completo y la serie de pasos que ha recibido la misma.</string>
    <string name="color_description">Aquí seleccionarás el color para todos los campos que tengan el mismo id.</string>
    <string name="field_name_description">Aquí puedes seleccionar distintos nombres para el terreno.</string>
    <string name="title_activity_expansion_details">ExpansionDetails</string>
    <string name="start_algorithms">Iniciar algoritmos de busqueda</string>
    <string name="start_game_manual">Iniciar juego manual</string>
    <string name="title_activity_search_algorithms">SearchAlgorithms</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_uniform_cost">Coste uniforme</string>
    <string name="title_first_the_best">Primero el mejor</string>
    <string name="title_a_star">A*</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_algorithm">Iniciar algoritmo de busqueda</string>
    <string name="refresh_rate">Tiempo de actualizacion</string>
    <string name="choose_distance_measure_type">Elige el tipo de medida para el algoritmo</string>
    <string name="path_not_found">Camino no encontrado</string>
    <string name="slot_position">Orden de casilla</string>
    <string name="slot_position_description">Aqui se muestra el orden de expansion del arbol y el algoritmo. Los numeros representan el orden de prioridad.</string>
    <string name="expansion_order_title_button">Boton de orden de expansion.</string>
    <string name="expansion_order_description_button">Al presionar el boton definiras el orden de expansion explicado previamente, ten cuidado en elegir el orden que desees.</string>
    <string name="start_algorithm_description">Se habilitara una vez elijas el algoritmo de busqueda, aqui se ejecuta el algoritmo automatico.</string>
    <string name="start_manual_algorithm_description">Aqui puedes jugar manualmente :3, no utiliza ningun algoritmo en especifico.</string>
    <string name="actualization_time">Tiempo de actualizacion</string>
    <string name="actualization_time_description">Aqui defines el tiempo entre saltos al momento de ejecutar el algoritmo.</string>
    <string name="start_algorithm_game">Al presionar aqui, iniciara el algoritmo.</string>
    <string name="measure_type_algorithm">Tipo de medida.</string>
    <string name="measure_type_algorithm_description">Elige el tipo de medida que desees.</string>
</resources>
