<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/congratulation_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            app:cardBackgroundColor="#FAFAFA"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_dialog_item_character_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="48dp"
                    android:text="@string/character_name"
                    android:textColor="@android:color/primary_text_light"
                    android:textSize="24sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="50dp"
                        android:text="@string/biome"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/costs"
                        android:textColor="@android:color/primary_text_light"
                        android:textSize="18sp" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_dialog_item_character"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </androidx.recyclerview.widget.RecyclerView>

                <Button
                    android:id="@+id/btn_dialog_item_character_ok"
                    style="@style/AppTheme.Button"
                    android:layout_width="match_parent"
                    android:layout_height="75dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/accept"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_dialog_item_character_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_gravity="center_horizontal|top"
            android:padding="1dp"
            android:src="@drawable/cabra"
            app:civ_border_color="#FAFAFA"
            app:civ_border_width="3dp" />

    </FrameLayout>
</LinearLayout>