<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.FieldInformation"
    android:background="@color/backgroundGrayColor">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_field_color"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="20dp"
                android:src="@color/backgroundGrayColor"
                app:civ_border_color="#FFFFFFFF"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/cell_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/blackColor"
                android:textSize="30sp" />

            <TextView
                style="@style/AppTheme.TextHeader"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/field_type"
                android:textColor="@color/label"
                android:textSize="@dimen/text_header_size" />

            <EditText
                android:id="@+id/et_field_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:autofillHints=""
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:hint="@string/field_name"
                android:inputType="textPersonName" tools:targetApi="o"/>

            <TextView
                style="@style/AppTheme.TextHeader"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/field_value"
                android:textColor="@color/label"
                android:textSize="@dimen/text_header_size" />

            <TextView
                android:id="@+id/tv_field_id"
                style="@style/AppTheme.TextRow"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="@string/field_type"
                android:textColor="@color/label"
                android:textSize="@dimen/text_header_size" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/AppTheme.TextHeader"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/field_initial"
                    android:textColor="@color/label"
                    android:textSize="@dimen/text_header_size" />

                <TextView
                    style="@style/AppTheme.TextHeader"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/field_final"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/label"
                    android:textSize="@dimen/text_header_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox

                    android:id="@+id/cb_field_initial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cb_field_final"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="105dp" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_ok"
        style="@style/AppTheme.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.904"
        app:srcCompat="@drawable/check_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>