<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.FirstBest">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardElevation="8dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:orientation="horizontal"
                        android:layout_margin="10dp"
                        >

                        <TextView
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            android:text="@string/choose_distance_measure_type"
                            />

                        <Spinner
                            android:id="@+id/sp_measure_type"
                            android:layout_weight="1"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textAlignment="center"
                            />

                    </LinearLayout>

                    <TableLayout
                        android:id="@+id/tl_game_table_map"
                        android:layout_width="match_parent"
                        android:layout_height="450dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:shrinkColumns="*"
                        android:stretchColumns="*">

                    </TableLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/tv_refresh_rate"
                            android:layout_width="100dp"
                            android:layout_height="wrap_content"
                            android:text="@string/refresh_rate"
                            android:textAlignment="center" />

                        <SeekBar
                            android:id="@+id/sb_refresh_bar"
                            style="@android:style/Widget.Material.SeekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_start_algorithm"
                        style="@style/AppTheme.Button"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/start_algorithm" />

                </LinearLayout>

            </ScrollView>

        </com.google.android.material.card.MaterialCardView>


    </LinearLayout>

</FrameLayout>